# PureCtx

./: Cargo.toml  README.md
.github/: copilot-instructions.md
.github/instructions/: PureCtx.instructions.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/application/: mod.rs
src/domain/: clean.rs  filter.rs  mod.rs  sift.rs  snip.rs  stats.rs  tracking.rs
src/infra/: builtin.rs  cli.rs  config.rs  gain.rs  io.rs  mod.rs  proxy.rs
src/infra/filters/: cargo.toml  dotnet.toml  gradle.toml  maven.toml  npm.toml
tests/: cli_tests.rs
