[package]
name = "purectx"
version = "0.1.0"
edition = "2024"
description = "A context purification utility for LLMs"
license = "MIT"

[[bin]]
name = "pure"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
thiserror = "1"
memchr = "2"
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
