[package]
name = "purectx"
version = "0.1.0"
edition = "2024"
description = "A command-output purification proxy for LLMs"
license = "MIT"

[[bin]]
name = "pure"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
thiserror = "1"
memchr = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
